se agregan centros, reclamos y se actualiza el update de prioridad
